On mobile - there should not be a slider on the landing. Please change to a fixed image

--- a/app/assets/stylesheets/media-queries.css
+++ b/app/assets/stylesheets/media-queries.css
@@ -594,10 +594,8 @@ html {
     border: medium none;
 }
 .bg-grey .search-input {
-  margin: 18px 0;
+  0;
   padding-left: 30px;
-  text-align: center;
-  width: 85px
 
 }
 
@@ -648,7 +646,7 @@ html {
 
 @media (max-width: 360px) {
 .bg-grey .search-input {
-  margin: 25px 0 0px 52px;
+  margin: 0;
   padding-left: 56px;
 }
 #menu li a {
